manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redjar-test-app
  labels:
    app: redjar
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: redjar
  template:
    metadata:
      labels:
        app: redjar
      annotations:
        force-sync: "2025-07-10-16-59"
    spec:
      containers:
        - name: redjar-container
          image: asantar0/redjar-test-app:7fffc96
          ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: regcred
