manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redjar-service
spec:
  type: ClusterIP
  selector:
    app: redjar
  ports:
    - port: 80
      targetPort: 3000
